	  in Universe()
        * trajectory reader: DCDReader can reverse trajectory with
          negative step increment; XTC/TRRReader can do simple
          (forward) slices by doing (slow!) sequential iteration
        * deprecated principleAxes() and introduced principalAxes()
          with less confusing return values (Issue 33).
	* fixed wrong unitcell dimensions for XTC/TRR (Issue 34)

05/28/10 orbeckst, denniej0
        * 0.6.2 release
	* removed a number of imports from the top level (such as rms_fitting);
  	  this might break some scripts that still rely on the layout that was
  	  used for 0.5.x (which is now officially declared deprecated)
        * defined trajectory API
        * deprecated DCD.dcd_header --> DCD._dcd_header
	* XTC and TRR compute numframes by iterating through trajectory (slow!)
	* introduced units: base units are ps (time) and Angstrom (length); see core.flags
	* XTC and TRR automatically convert between native Gromacs units (ps, nm) and 
          base units (uses core.flags['convert_gromacs_lengths'] = True)
	* more test cases
        * *really* FIXED Issue 16 (can easy_install from tar file)
	* FIXED a bug in AtomGroup.principleAxes()
	* added dependency information to setup.py (numpy and
  	  biopython by default; nose for tests)

04/30/10 orbeckst

        * 0.6.1 release
	* can build a simple Universe from a PDB file (FIXES Issue 11)
        * can read Gromacs XTC and TRR files (FIXES Issue 1) but no
	  Timeseries or Collections yet for those formats
	* removed Universe.load_new_dcd() and Universe.load_new_pdb()
	  --- use the generic Universe.load_new() (MIGHT BREAK OLD CODE)
        * removed deprecated Universe._dcd attribute (MIGHT BREAK OLD CODE)
        * FIXED bug in PDB.PDBWriter and CRD.CRDWriter
        * use SloppyPDB in order to cope with large PDB files
	* core.distances.self_distance_array() is now behaving the
	  same way as distance_array()